# Software-Tutorials

./: .gitignore  README.md
blender/: 1_blemderpy_bpy.md  bake_texture.md
cvcgtools/: linux_lib.md  list.md
cvcgtools/GAPS/: .0_installation.md.swp  0_installation.md  1_voxelization.md
cvcgtools/kornia/: README.md
cvcgtools/opencv/: opencv.md
cvcgtools/opencv/load_images/: load_images.cpp
cvcgtools/opengl/: introduction.md  learning_resources.txt
cvcgtools/opengl/0_checking_coordinates/: 0_checking_coorindates.md  CMakeLists.txt  SimpleVertexShader.vertexshader  check_coordinates  check_coordinates.cpp
cvcgtools/opengl/1_cyclicly_occluding_triangles/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  cyclicly_occluding_triangles  cyclicly_occluding_triangles.cpp  cyclicly_occluding_triangles.md
cvcgtools/point_cloud_library/: 0_installation.md
cvcgtools/point_cloud_library/1_octree/: CMakeLists.txt  octree_search.cpp
cvcgtools/pyembree/: pyembree.md
cvcgtools/pytorch-geometric/: README.md
cvcgtools/pytorch3d/: 0_Introduction.md  1_rendering.py  README.md
cvcgtools/torch-points3d/: README.md
cvcgtools/trimesh/: 0_trimesh_overview.md  1_basic_IO.md  2_mesh_attributes.md  3_transformations.md
cvtools/: list.md
cvtools/3d/: pyembree.md
cvtools/image/: openexr.md
docker/: 4_docker_ssh.md  5_nvidia_cuda_docker.md  6_saving_container_as_image.md  build_pull_image.md  intro.md  nvidia_cuda_docker.md  run_image.md  start_exec_stop_rm.md
file_formats/: ply.md  ply.ply  read_ply.py
for_fun/mul_and_div/: a.out  mul_and_div.cpp  mul_and_div.md  mul_and_div.py
gcc/: 0_overview.md
linux/: 0_installation.md  2_gnome_ext.md  2_shell_script.sh  3_mimetype.md  5_mounting.md  6_appconfigs.md  list_tools.md  ssh.md
linux/2_example/: 2_shell_script.sh
linux/4_mime_examples/: ply-mime.xml
nvidia/: exercise.md  nvidia_linux.md
nvidia/0_driver_and_cuda_installation/: nvidia_linux.md
nvidia/1_cuda_programming/: 0_basic_concepts_and_programming_model.md
nvidia/3_cuda_exercises/: ex0_nvcc_can_compile_cpp.cu  ex1_copy_between_host_and_device.cu  ex2_lauching_kernels.cu  ex3_reverse_array.cu  utils.h
python/: 0_simple_arithmetics.md
python/2_class/: 0_class.md  1_basics.py  2_methods.py  3_overriding.py  4_inheritance.py  5_overriding.py  6_super.py
python/3_del/: 0_del.md  1_del.py  2_del_in_function.py
python/4_functions/: 0_modifying_inside_function.py
python_cpp/ctypes/: ctypes.md
python_packages/argparse/: 0_example.md  1_add_argument.md
python_packages/neural-renderer-pytorch/: 0_installation.md
python_packages/pyopengl/: 1_draw_triangle.py
python_packages/pyrender/: render_with_opacity.md  render_with_opacity.py
python_packages/pytorch/: 0_topics.md  1_installation.md
python_packages/smplx/: smplx.md
python_packages/tensorboard/: csv_plot.py  example.py
pytorch/: README.md
pytorch/1_tensor/: tensor_example.py
pytorch/2_cpp_api/: 0_overview.md
resourcelist/: missing-cs-semeter.txt
tensorboard/: tensorboard.md
tensorflow-1-15/: 0_data_and_session.py  1_linear_regression.py
(+98 files in other folders)
